# tarot

./: .gitignore  LICENSE  README.md  claude_impl_refactor.md  claude_refactor.md  claude_sim_refactor.md  is_mcts_compare.py  main.py  mcts_analysis.py  mcts_comparison.py  metrics.py  notebook.ipynb  plot_basic.py  plot_from_results.py  plot_metrics.py  plotting_base.py  plotting_comparative.py  plotting_dashboard.py  plotting_performance.py  plotting_time_series.py  plotting_winrate.py  pyproject.toml  random_example.py  report_generator.py  ris_mcts_example.py  ris_mcts_example_refactor.py  run.bat  run_analysis.py  run_plots.py  simulation.py  simulation_simple.py
article/: article.fdb_latexmk  article.fls  article.tex  sbc-template.sty
game/: __init__.py  actions.py  bids.py  cards.py  game.py  utils.py
notebook/: notebook.ipynb
scripts/: mcts_comparison.py  report_generator.py  simulation.py
tarot/: __init__.py  actions.py  bids.py  cards.py  constants.py  game.py  is_mcts.py  mcts.py  ris_mcts.py  tarot.py  utils.py
tarot_rl/: actions.py  agents.py  belief.py  bids.py  cards.py  constants.py  is_mcts.py  state.py  tarot.py  utils.py
